# lexiglow-backend

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  GEMINI.md  LICENSE  QUICKSTART.md  README.md  USER_CRUD_IMPLEMENTATION.md  debug.py  docker-compose.yml  openapi.yaml  pyproject.toml  requirements.txt
.github/workflows/: docs.yml
app/: README.md  __init__.py  main.py
app/application/dto/: __init__.py  language_dto.py  text_dto.py  user_dto.py
app/application/services/: __init__.py  language_service.py  text_service.py  user_service.py
app/core/: __init__.py  app_initializer.py  config.py  container.py  dependencies.py  exceptions.py  ids.py  logging.py  logging_config.py  types.py
app/domain/entities/: enums.py  language.py  models.py  text.py  user.py  vocabulary.py
app/domain/interfaces/: __init__.py  base_repository.py  language_repository.py  repository_factory.py  text_repository.py  user_repository.py
app/infrastructure/database/: repositories.py
app/infrastructure/database/mongodb/: __init__.py
app/infrastructure/database/mongodb/repositories/: language_repository_impl.py  text_repository_impl.py  user_repository_impl.py
app/infrastructure/database/repositories/: user_repository_impl.py
app/infrastructure/database/sqlite/: README.md  __init__.py  connection.py  models.py  session.py
app/infrastructure/database/sqlite/repositories/: __init__.py  language_repository_impl.py  text_repository_impl.py  user_repository_impl.py
app/presentation/api/v1/: about.py  health.py  languages.py  texts.py  users.py
app/presentation/schemas/: __init__.py  responses.py  text_schema.py  user_schema.py  vocabulary_schema.py
app/routes/: __init__.py
docker/: README.md  docker-compose.yml
docker/mongo-init/: 01-init-database.js  01-mongodb-init.js  02-seed-data.js
mongo-init/: 01-init-database.js
scripts/: README.md  activate.sh  create_sqlite_db.py  create_test_sqlite_db.sql  debug.py  generate_docs.py  mongodb.sh  sample_data.json  seed_sqlite_db.py  test_user_repository.py  wsgi.py
tests/: README.md  test_about.py  test_health.py
tests/infrastructure/database/sqlite/: test_orm_models.py  test_session.py
tests/presentation/api/v1/: test_about.py
tests/unit/application/services/: test_language_service.py  test_text_service.py  test_user_service.py
(+19 files in other folders)
